# loan-default-predictor

./: .gitignore  README.md  pyproject.toml
checkpoints/: best_model_exp_1.pt  best_model_exp_2.pt  best_model_exp_3.pt  best_model_exp_4_dropout0.01.pt  best_model_exp_4_dropout0.1.pt  best_model_exp_4_dropout0.2.pt  best_model_exp_4_dropout0.5.pt  best_model_exp_4_dropout0.9.pt  best_model_exp_5_wd0.001_lr0.01.pt  best_model_exp_5_wd0.001_lr0.05.pt  best_model_exp_5_wd0.001_lr0.1.pt  best_model_exp_5_wd0.01_lr0.01.pt  best_model_exp_5_wd0.01_lr0.05.pt  best_model_exp_5_wd0.01_lr0.1.pt  best_model_exp_5_wd0.1_lr0.01.pt  best_model_exp_5_wd0.1_lr0.05.pt  best_model_exp_5_wd0.1_lr0.1.pt
runs/experiment_1/: events.out.tfevents.1743415446.LAPTOP-7N32K7GU.2816.0
runs/experiment_1/Loss_Test/: events.out.tfevents.1743415448.LAPTOP-7N32K7GU.2816.2
runs/experiment_1/Loss_Train/: events.out.tfevents.1743415448.LAPTOP-7N32K7GU.2816.1
runs/experiment_2/: events.out.tfevents.1743416385.LAPTOP-7N32K7GU.23816.0
runs/experiment_2/Loss_Test/: events.out.tfevents.1743416391.LAPTOP-7N32K7GU.23816.2
runs/experiment_2/Loss_Train/: events.out.tfevents.1743416391.LAPTOP-7N32K7GU.23816.1
runs/experiment_3/: events.out.tfevents.1743416766.LAPTOP-7N32K7GU.17028.0  events.out.tfevents.1743422846.LAPTOP-7N32K7GU.13980.0
runs/experiment_3/Loss_Test/: events.out.tfevents.1743416772.LAPTOP-7N32K7GU.17028.2  events.out.tfevents.1743422852.LAPTOP-7N32K7GU.13980.2
scripts/: run.py
src/loan_default_predictor/: data.py  model.py  train.py
(+44 files in other folders)
